pod.yaml
---

apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  labels: 
    app: my-app
  namespace: test
spec:
  containers:
    - name: class-container
      image: httpd
      ports:
        - containerPort: 80

    - name: tomcat-container
      image: tomcat
      ports:
        - containerPort: 8080

...

---
apiVersion: v1
kind: Service
metadata:
  name: class-service
  namespace: test
spec:
  selector: 
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

...
