rc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
...

---
apiVersion: v1
kind: Service
metadata:
  name: my-svc
  namespace: test
spec:
  ports:
    - name: my-port
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: my-app
  type: NodePort
...
