rs.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector: 
    app: cbz-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort

...
