statefulset.yaml
---

apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: my-sts
  labels:
    app: mysql
spec:
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-container
          image: mysql
          ports:
            - containerPort: 3306
  replicas: 3
  selector:
    matchLabels:
      app: mysql
    
...

---

apiVersion: v1
kind: Service
metadata:
  name: my-service
  
spec:
  selector: 
    app: mysql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3306
  type: NodePort

...
